--- a/src/main/resources/views/mainView.fxml
+++ b/src/main/resources/views/mainView.fxml
@@ -1,20 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.* ?>
+<?import javafx.scene.layout.* ?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="753.0" prefWidth="1304.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="709.0" prefWidth="1304.0" xmlns="http://javafx.com/javafx/11.0.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainViewController">
    <children>
-      <Button fx:id="btnStartStop" layoutX="26.0" layoutY="32.0" mnemonicParsing="false" onAction="#btnStartStop_clicked" prefHeight="35.0" prefWidth="35.0" />
-      <Button fx:id="btnNextStep" layoutX="74.0" layoutY="32.0" mnemonicParsing="false" onAction="#btnNextStep_clicked" prefHeight="35.0" prefWidth="35.0" />
-      <Button fx:id="btnRestart" layoutX="122.0" layoutY="32.0" mnemonicParsing="false" onAction="#btnRestart_clicked" prefHeight="35.0" prefWidth="35.0" />
+      <Button fx:id="btnStartStop" layoutX="25.0" layoutY="32.0" mnemonicParsing="false" onAction="#btnStartStop_clicked" prefHeight="35.0" prefWidth="70.0" />
+      <Button fx:id="btnNextStep" layoutX="109.0" layoutY="32.0" mnemonicParsing="false" onAction="#btnNextStep_clicked" prefHeight="35.0" prefWidth="70.0" />
+      <Button fx:id="btnRestart" layoutX="193.0" layoutY="32.0" mnemonicParsing="false" onAction="#btnRestart_clicked" prefHeight="35.0" prefWidth="70.0" />
       <Label layoutX="27.0" layoutY="75.0" prefHeight="25.0" prefWidth="138.0" text="Analyzed function" />
-      <ChoiceBox fx:id="cbFunction" layoutX="27.0" layoutY="107.0" onAction="#cbFunction_selectedItemChanged" prefHeight="25.0" prefWidth="200.0" />
+      <ChoiceBox fx:id="cbFunction" layoutX="27.0" layoutY="107.0" onAction="#cbFunction_selectedItemChanged" prefHeight="25.0" prefWidth="234.0" />
       <Label layoutX="27.0" layoutY="145.0" prefHeight="25.0" prefWidth="138.0" text="Function formula" />
-      <TextArea fx:id="taFunctionFormula" layoutX="27.0" layoutY="177.0" prefHeight="88.0" prefWidth="200.0" />
+      <TextArea fx:id="taFunctionFormula" layoutX="27.0" layoutY="177.0" prefHeight="88.0" prefWidth="234.0" wrapText="true" />
+      <TextField fx:id="tfVariablesRange" layoutX="27.0" layoutY="304.0" prefHeight="25.0" prefWidth="234.0" />
+      <Label layoutX="27.0" layoutY="279.0" prefHeight="25.0" prefWidth="138.0" text="Range of variables" />
+      <Button fx:id="btnUpdateFunction" layoutX="27.0" layoutY="419.0" mnemonicParsing="false" onAction="#btnUpdateFunction_clicked" prefHeight="35.0" prefWidth="234.0" text="Update function" />
+      <Label layoutX="27.0" layoutY="345.0" prefHeight="25.0" prefWidth="138.0" text="Number of particles" />
+      <Label layoutX="23.0" layoutY="529.0" prefHeight="25.0" prefWidth="138.0" text="Inertia" />
+      <Label layoutX="25.0" layoutY="582.0" prefHeight="25.0" prefWidth="168.0" text="Aspiration for local optimum" />
+      <Label layoutX="22.0" layoutY="635.0" prefHeight="25.0" prefWidth="211.0" text="Aspiration for global optimum" />
+      <Label layoutX="23.0" layoutY="475.0" prefHeight="25.0" prefWidth="138.0" text="Speed" />
+      <Spinner fx:id="spinnerNumberOfParticles" layoutX="27.0" layoutY="377.0" prefHeight="25.0" prefWidth="234.0">
+         <valueFactory>
+            <SpinnerValueFactory.IntegerSpinnerValueFactory min="1" max="100" initialValue="50" amountToStepBy="1"/>
+         </valueFactory>
+      </Spinner>
+      <Slider fx:id="sliderSpeed" layoutX="22.0" layoutY="500.0" max="300.0" prefHeight="14.0" prefWidth="234.0" value="150.0" />
+      <Slider fx:id="sliderInertia" layoutX="22.0" layoutY="554.0" max="0.1" prefHeight="14.0" prefWidth="234.0" value="0.02" />
+      <Slider fx:id="sliderLocalOptimum" layoutX="22.0" layoutY="607.0" max="0.1" prefHeight="14.0" prefWidth="234.0" value="0.04" />
+      <Slider fx:id="sliderGlobalOptimum" layoutX="22.0" layoutY="660.0" max="0.1" prefHeight="14.0" prefWidth="234.0" value="0.05" />
    </children>
 </AnchorPane>
