--- a/src/main/resources/views/mainView.fxml
+++ b/src/main/resources/views/mainView.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.* ?>
-<?import javafx.scene.layout.* ?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="709.0" prefWidth="1304.0" xmlns="http://javafx.com/javafx/11.0.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainViewController">
    <children>
@@ -22,12 +22,13 @@
       <Label layoutX="23.0" layoutY="475.0" prefHeight="25.0" prefWidth="138.0" text="Speed" />
       <Spinner fx:id="spinnerNumberOfParticles" layoutX="27.0" layoutY="377.0" prefHeight="25.0" prefWidth="234.0">
          <valueFactory>
-            <SpinnerValueFactory.IntegerSpinnerValueFactory min="1" max="100" initialValue="50" amountToStepBy="1"/>
+            <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="50" max="100" min="1" />
          </valueFactory>
       </Spinner>
       <Slider fx:id="sliderSpeed" layoutX="22.0" layoutY="500.0" max="300.0" prefHeight="14.0" prefWidth="234.0" value="150.0" />
       <Slider fx:id="sliderInertia" layoutX="22.0" layoutY="554.0" max="0.1" prefHeight="14.0" prefWidth="234.0" value="0.02" />
       <Slider fx:id="sliderLocalOptimum" layoutX="22.0" layoutY="607.0" max="0.1" prefHeight="14.0" prefWidth="234.0" value="0.04" />
       <Slider fx:id="sliderGlobalOptimum" layoutX="22.0" layoutY="660.0" max="0.1" prefHeight="14.0" prefWidth="234.0" value="0.05" />
+      <Pane fx:id="pnChart" layoutX="294.0" layoutY="19.0" prefHeight="671.0" prefWidth="990.0" />
    </children>
 </AnchorPane>
