add passing data from view to controllers

--- a/src/main/resources/views/mainView.fxml
+++ b/src/main/resources/views/mainView.fxml
@@ -2,38 +2,60 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.*?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="709.0" prefWidth="1304.0" xmlns="http://javafx.com/javafx/11.0.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainViewController">
    <children>
-      <Button fx:id="btnStartStop" layoutX="25.0" layoutY="32.0" mnemonicParsing="false" onAction="#btnStartStop_clicked" prefHeight="35.0" prefWidth="70.0" />
-      <Button fx:id="btnNextStep" layoutX="109.0" layoutY="32.0" mnemonicParsing="false" onAction="#btnNextStep_clicked" prefHeight="35.0" prefWidth="70.0" />
-      <Button fx:id="btnRestart" layoutX="193.0" layoutY="32.0" mnemonicParsing="false" onAction="#btnRestart_clicked" prefHeight="35.0" prefWidth="70.0" />
+      <Button fx:id="btnStartStop" layoutX="25.0" layoutY="32.0" mnemonicParsing="false" onAction="#btnStartStop_clicked" prefHeight="35.0" prefWidth="70.0" text="Start/Stop" />
+      <Button fx:id="btnNextStep" layoutX="117.0" layoutY="32.0" mnemonicParsing="false" onAction="#btnNextStep_clicked" prefHeight="35.0" prefWidth="70.0" text="Next Step" />
+      <Button fx:id="btnRestart" layoutX="209.0" layoutY="32.0" mnemonicParsing="false" onAction="#btnRestart_clicked" prefHeight="35.0" prefWidth="70.0" text="Restart" />
       <Label layoutX="27.0" layoutY="75.0" prefHeight="25.0" prefWidth="138.0" text="Analyzed function" />
-      <ChoiceBox fx:id="cbFunction" layoutX="27.0" layoutY="107.0" onAction="#cbFunction_selectedItemChanged" prefHeight="25.0" prefWidth="234.0" />
+      <ChoiceBox fx:id="cbFunction" layoutX="27.0" layoutY="107.0" onAction="#cbFunction_selectedItemChanged" prefHeight="25.0" prefWidth="253.0" />
       <Label layoutX="27.0" layoutY="145.0" prefHeight="25.0" prefWidth="138.0" text="Function formula" />
-      <TextArea fx:id="taFunctionFormula" layoutX="27.0" layoutY="177.0" prefHeight="88.0" prefWidth="234.0" wrapText="true" />
-      <TextField fx:id="tfVariablesRange" layoutX="27.0" layoutY="304.0" prefHeight="25.0" prefWidth="234.0" text="-1, 1, -1, 1" />
-      <Label layoutX="27.0" layoutY="279.0" prefHeight="25.0" prefWidth="138.0" text="Range of variables" />
-      <Button fx:id="btnUpdateFunction" layoutX="27.0" layoutY="419.0" mnemonicParsing="false" onAction="#btnUpdateFunction_clicked" prefHeight="35.0" prefWidth="234.0" text="Update function" />
-      <Label layoutX="27.0" layoutY="345.0" prefHeight="25.0" prefWidth="138.0" text="Number of particles" />
-      <Label layoutX="23.0" layoutY="529.0" prefHeight="25.0" prefWidth="138.0" text="Inertia" />
-      <Label layoutX="25.0" layoutY="582.0" prefHeight="25.0" prefWidth="168.0" text="Aspiration for local optimum" />
-      <Label layoutX="22.0" layoutY="635.0" prefHeight="25.0" prefWidth="211.0" text="Aspiration for global optimum" />
-      <Label layoutX="23.0" layoutY="475.0" prefHeight="25.0" prefWidth="138.0" text="Speed" />
-      <Spinner fx:id="spinnerNumberOfParticles" layoutX="27.0" layoutY="377.0" prefHeight="25.0" prefWidth="234.0">
+      <TextArea fx:id="taFunctionFormula" editable="false" layoutX="27.0" layoutY="177.0" prefHeight="88.0" prefWidth="253.0" wrapText="true" />
+      <Label layoutX="27.0" layoutY="277.0" prefHeight="25.0" prefWidth="138.0" text="Range of variables" />
+      <Button fx:id="btnUpdateFunction" layoutX="28.0" layoutY="432.0" mnemonicParsing="false" onAction="#btnUpdateFunction_clicked" prefHeight="35.0" prefWidth="253.0" text="Update function" />
+      <Label layoutX="26.0" layoutY="362.0" prefHeight="25.0" prefWidth="138.0" text="Number of particles" />
+      <Label layoutX="26.0" layoutY="529.0" prefHeight="25.0" prefWidth="138.0" text="Inertia" />
+      <Label layoutX="26.0" layoutY="582.0" prefHeight="25.0" prefWidth="168.0" text="Aspiration for local optimum" />
+      <Label layoutX="26.0" layoutY="635.0" prefHeight="25.0" prefWidth="211.0" text="Aspiration for global optimum" />
+      <Label layoutX="26.0" layoutY="475.0" prefHeight="25.0" prefWidth="138.0" text="Speed" />
+      <Spinner fx:id="spinnerNumberOfParticles" layoutX="27.0" layoutY="393.0" prefHeight="25.0" prefWidth="253.0">
          <valueFactory>
             <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="50" max="100" min="1" />
          </valueFactory>
       </Spinner>
-      <Slider fx:id="sliderSpeed" layoutX="22.0" layoutY="500.0" max="300.0" prefHeight="14.0" prefWidth="234.0" value="150.0" />
-      <Slider fx:id="sliderInertia" layoutX="22.0" layoutY="554.0" max="0.1" prefHeight="14.0" prefWidth="234.0" value="0.02" />
-      <Slider fx:id="sliderLocalOptimum" layoutX="22.0" layoutY="607.0" max="0.1" prefHeight="14.0" prefWidth="234.0" value="0.04" />
-      <Slider fx:id="sliderGlobalOptimum" layoutX="22.0" layoutY="660.0" max="0.1" prefHeight="14.0" prefWidth="234.0" value="0.05" />
+      <Slider fx:id="sliderSpeed" layoutX="22.0" layoutY="500.0" max="300.0" prefHeight="14.0" prefWidth="253.0" value="150.0" />
+      <Slider fx:id="sliderInertia" layoutX="22.0" layoutY="554.0" max="0.1" prefHeight="14.0" prefWidth="253.0" value="0.02" />
+      <Slider fx:id="sliderLocalOptimum" layoutX="22.0" layoutY="607.0" max="0.1" prefHeight="14.0" prefWidth="253.0" value="0.04" />
+      <Slider fx:id="sliderGlobalOptimum" layoutX="22.0" layoutY="660.0" max="0.1" prefHeight="14.0" prefWidth="253.0" value="0.05" />
       <Pane fx:id="pnChart" layoutX="294.0" layoutY="19.0" prefHeight="671.0" prefWidth="990.0">
          <cursor>
             <Cursor fx:constant="DEFAULT" />
          </cursor></Pane>
+      <Spinner fx:id="spinnerMinX" editable="true" layoutX="27.0" layoutY="307.0" prefHeight="25.0" prefWidth="59.0">
+         <valueFactory>
+            <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="-1" max="20" min="-20" />
+         </valueFactory>
+      </Spinner>
+      <Spinner fx:id="spinnerMaxX" layoutX="91.0" layoutY="307.0" prefHeight="25.0" prefWidth="59.0">
+         <valueFactory>
+            <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="-1" max="20" min="-20" />
+         </valueFactory>
+      </Spinner>
+      <Spinner fx:id="spinnerMaxY" layoutX="220.0" layoutY="307.0" prefHeight="25.0" prefWidth="59.0">
+         <valueFactory>
+            <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="-1" max="20" min="-20" />
+         </valueFactory>
+      </Spinner>
+      <Spinner fx:id="spinnerMinY" layoutX="155.0" layoutY="307.0" prefHeight="25.0" prefWidth="59.0">
+         <valueFactory>
+            <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="1" max="20" min="-20" />
+         </valueFactory>
+      </Spinner>
+      <Label alignment="CENTER" layoutX="27.0" layoutY="335.0" prefHeight="25.0" prefWidth="59.0" text="min X" />
+      <Label alignment="CENTER" layoutX="155.0" layoutY="335.0" prefHeight="25.0" prefWidth="59.0" text="min Y" />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="220.0" layoutY="335.0" prefHeight="25.0" prefWidth="59.0" text="max Y" />
+      <Label alignment="CENTER" layoutX="91.0" layoutY="335.0" prefHeight="25.0" prefWidth="59.0" text="max X" />
    </children>
 </AnchorPane>
