--- a/src/main/resources/views/mainView.fxml
+++ b/src/main/resources/views/mainView.fxml
@@ -33,7 +33,7 @@
          <cursor>
             <Cursor fx:constant="DEFAULT" />
          </cursor></Pane>
-      <Spinner fx:id="spinnerMinX" editable="true" layoutX="27.0" layoutY="307.0" prefHeight="25.0" prefWidth="70.0">
+      <Spinner fx:id="spinnerMinX" layoutX="27.0" layoutY="307.0" prefHeight="25.0" prefWidth="70.0">
          <valueFactory>
             <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" max="500" min="-500" />
          </valueFactory>
